<resources>
    <string name="app_name">Quiz App</string>

    <string name="question_1">1) What does GST stands for ?</string>
    <string name="question_2">2) The Concept of GST is Originated in ....</string>
    <string name="question_3">3) Which of the following tax will be abolished by the GST ?</string>
    <string name="question_4">4) Which of the following good will not be covered under GST bill ?</string>
    <string name="question_5">5) Which of the following is the main motive of the government behind the introduction of the Goods and Services Tax ?</string>
    <string name="question_6">6) who is the Head of GST council ?</string>
    <string name="finalImage">See the above Image</string>
    <string name="ques1_edit">Case sensitive with no spaces</string>

</resources>
